fix: add margin on mobile devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,10 +36,15 @@ body {
     margin-bottom: 2.5rem;
     margin-left: auto;
     margin-right: auto;
-    max-width: 765px;
+    max-width: 768px;
 
     overflow: scroll;
     overflow-wrap: break-word;
+
+    @media (max-width: 768px) {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
 }
 
 a {
